Remove orika, Add custom mappers